docs/versioned_docs/version-2.1.x/reference/rasa/core/policies/ensemble.md
---
sidebar_label: ensemble
title: rasa.core.policies.ensemble
---

## PolicyEnsemble Objects

```python
class PolicyEnsemble()
```

#### check\_domain\_ensemble\_compatibility

```python
 | @staticmethod
 | check_domain_ensemble_compatibility(ensemble: Optional["PolicyEnsemble"], domain: Optional[Domain]) -> None
```

Check for elements that only work with certain policy/domain combinations.

#### persist

```python
 | persist(path: Union[Text, Path]) -> None
```

Persists the policy to storage.

#### load

```python
 | @classmethod
 | load(cls, path: Union[Text, Path]) -> "PolicyEnsemble"
```

Loads policy and domain specification from storage

## SimplePolicyEnsemble Objects

```python
class SimplePolicyEnsemble(PolicyEnsemble)
```

Default implementation of a `Policy` ensemble.

#### is\_not\_in\_training\_data

```python
 | @staticmethod
 | is_not_in_training_data(policy_name: Optional[Text], max_confidence: Optional[float] = None) -> bool
```

Checks if the prediction is by a policy which memoized the training data.

**Arguments**:

- `policy_name` - The name of the policy.
- `max_confidence` - The max confidence of the policy&#x27;s prediction.
  
- `Returns` - `True` if it&#x27;s a `MemoizationPolicy`, `False` otherwise.

#### probabilities\_using\_best\_policy

```python
 | probabilities_using_best_policy(tracker: DialogueStateTracker, domain: Domain, interpreter: NaturalLanguageInterpreter, **kwargs: Any, ,) -> PolicyPrediction
```

Predicts the next action the bot should take after seeing the tracker.

Picks the best policy prediction based on probabilities and policy priority.
Triggers fallback if `action_listen` is predicted after a user utterance.

**Arguments**:

- `tracker` - the :class:`rasa.core.trackers.DialogueStateTracker`
- `domain` - the :class:`rasa.shared.core.domain.Domain`
- `interpreter` - Interpreter which may be used by the policies to create
  additional features.
  

**Returns**:

- `best_probabilities` - the list of probabilities for the next actions
- `best_policy_name` - the name of the picked policy

## InvalidPolicyConfig Objects

```python
class InvalidPolicyConfig(RasaException)
```

Exception that can be raised when policy config is not valid.

